# chatpp

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
assistant-agent/: package-lock.json  package.json  run-turn.mjs
example/app/: globals.css  layout.tsx  page.tsx
example/components/timeline/: message-pane.tsx  moment-item.tsx  outline-pane.tsx  subtopic-card.tsx  timeline-view.tsx  topic-card.tsx  topic-sidebar.tsx
example/components/ui/: prompt-input.tsx
example/lib/: timeline-data.ts
scripts/: tauri-dev.mjs
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assistant_bridge.rs  assistant_tools.rs  commands.rs  db.rs  env_config.rs  main.rs  state.rs  timeline_ai.rs  timeline_db.rs  timeline_indexer.rs  timeline_types.rs  types.rs
src/components/: activity-rail.tsx  assistant-markdown.tsx  assistant-pane.tsx  assistant-processing-trace.tsx  assistant-stream-blocks.tsx  assistant-tool-call-popover.tsx  chat-list.tsx  contact-avatar.tsx  context-pane-host.tsx  date-range-filter.tsx  message-bubble.tsx  message-minimap.tsx  message-search.tsx  message-view.tsx  pane-nav-header.tsx  reply-thread-overlay.tsx  search-sidebar-pane.tsx  timeline-pane.tsx  workspace-shell.tsx
src/components/ui/: pane-search-input.tsx  resizable.tsx  (+1 more)
src/hooks/: use-rowid-jump-bridge.ts
src/lib/: assistant-citations.ts  assistant-models.ts  assistant-stream-blocks.ts  assistant-tool-status.ts  commands.ts  types.ts
